--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "homepage": "https://github.com/brandfrisch/sigh#readme",
   "scripts": {
     "commitmsg": "commitlint -e ",
-    "precommit": "yamllint . && ansible-lint ."
+    "precommit": "yamllint . && ansible-lint -R -r /usr/local/src/ansible-lint/rules . || exit 1",
+    "develop": "nodemon"
   },
   "commitlint": {
     "extends": [
       "./node_modules/@commitlint/config-conventional"
     ]
+  },
+  "nodemonConfig": {
+    "exec": "yamllint . && ansible-lint -R -r /usr/local/src/ansible-lint/rules . || exit 1",
+    "ext": "yml"
   },
   "release": {
     "tagFormat": "${version}",
@@ -35,6 +40,7 @@
     "@commitlint/config-conventional": "^6.1.2",
     "@semantic-release/exec": "^2.0.1",
     "husky": "^0.14.3",
-    "semantic-release": "^13.4.1"
+    "semantic-release": "^13.4.1",
+    "nodemon": "^1.17.1"
   }
 }
